css/styles.css
/* ... */
* {
  box-sizing: border-box;
}

html {
  overflow: scroll;
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 0;
  /* Remove scrollbar space */
  background: transparent;
  /* Optional: just make scrollbar invisible */
}

/* Optional: show position indicator in red */
::-webkit-scrollbar-thumb {
  background: #FF0000;
}

body {
  background-image: var(--background-color);
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: #C7BFC6;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: 300;
  line-height: 1.6;
  max-width: 100vw;
  margin: auto 10%;
  text-align: center;
  /*cursor: none;*/
}

h1 {
  color: var(--heading-color);
  font-size: var(--big-font-size);
  font-weight: 700;
  border-bottom: 1px solid rgb(66, 178, 200);
  padding: 30px;
  padding-bottom: 10px;
}

h2 {
  font-size: 24px;
  font-weight: 300;
}

h3 {
  color: #8E808D;
  font-size: 22px;
  font-weight: 300;
}

p {
  color: #AA9FAA;
}

main {
  position: relative;
  margin: 40px 20px 0 20px;
  z-index: -2;
}

/*-------------------CUSTOM CURSOR-----------------*/

/*.cursor {
  width: 25px;
  height: 25px;
  position: absolute;
  top: 0;
  left: 0;
  border: 2px solid black;
  transform: translate3d(-50%, -50%, 0);
  border-radius: 50%;
}

.cursor-lazy {
  width: 5px;
  height: 5px;
  border: 2px solid black;
  border-radius: 50%;
  position: absolute;
  transform: translate3d(-50%, -50%, 0);
  top: 0;
  left: 0;
  transition: 0.01s ease-out;
}

.cursor:hover,
.cursor:active,
.cursor::after,
.cursor::before{
  width: 40px;
  height: 40px;
  position: absolute;
  top: 0;
  left: 0;
  border: 2px solid black;
  transform: translate3d(-50%, -50%, 0);
  border-radius: 50%;
  transition: 0.5s ease-out;
}*/

/*----------------custom cursor end------------------*/
.page-header {
  display: flex;
  padding-top: 0;
  width: var(--complete-width);
  max-width: 100%;
  height: 50px;
  position: fixed;
  top: 0;
  left: 0;
  background-image: var(--menu-color);
  /*  box-shadow: var(--medium-box-shadow);*/
}

.personal-logo {
  width: 150px;
  margin-left: 75px;
}

.page-header__item {
  flex: 0 1 200px;
}

.page-header__item:last-child {
  flex-grow: 1;
  text-align: right;
}

.navigation-list,
.mobile-nav-list {
  list-style-type: none;
}

/*Navigation animation NOT WORKING PROPERLY */
.navigation-list__item:before,
.navigation-list__item:after {
  position: absolute;
  width: var(--complete-width);
  height: 1px;
  background: #000;
  content: "";
  padding-right: 2px;
  opacity: 0;
  transition: all .3s;
}

.navigation-list__item:before {
  top: 0px;
  transform: translateY(50px);
  width: auto;
}

.navigation-list__item:after {
  bottom: 0px;
  display: flex;
  flex-direction: row-reverse;
  transform: translateY(-5px);
  width: 100%;
  background-color: #392038;
}

.navigation-list__item:hover:before,
.navigation-list__item:hover:after {
  opacity: 1;
  transform: translate(0);
}

/* navigation animation end */
.navigation-list li {
  display: inline-block;
  margin-left: 15px;
  width: auto;
  border-radius: 5px;
}

.navigation-list {
  margin-right: 80px;
  padding-left: 0;
}

.navigation-list__item,
.mobile-nav-list__item {
  color: #414463;
  font-weight: 300;
  text-decoration: none;
}

.navigation-list__item:visited {
  color: var(--heading-color);
}

.navigation-list__item:hover,
.navigation-list__item:focus {
  text-decoration: none;
  text-shadow: 0 0 2px white;
}

.navigation-list__item:active {
  color: #000;
}

.navigation-list__item {
  color: var(--heading-color);
}

/*---------------Mobile Navigation--------------*/
#menu-toggle {
  display: block;
  position: relative;
  top: 50px;
  right: 5px;
}

#menu-toggle input {
  display: block;
  width: 40px;
  height: 40px;
  position: absolute;
  right: 0px;
  top: -70px;
  cursor: pointer;
  opacity: 0;
  /* hide the checkbox */
  z-index: 2;
  /* and place it over the hamburger */
}

#menu-toggle span {
  display: block;
  position: relative;
  right: 0px;
  top: -50px;
  background: black;
  height: 3px;
  width: 40px;
  margin-bottom: 7px;
}

.hamburger__lines {
  display: block;
  position: absolute;
  right: 0px;
  top: -25px;
}

.mobile-nav-list {
  background-image: var(--background-color);
  width: 400px;
  height: 390px;
  text-align: right;
  margin-top: -58px;
  padding-left: 0;
  box-shadow: var(--medium-box-shadow);
}

.mobile-nav-list li {
  margin-top: 20px;
}

.mobile-nav-list__item {
  text-align: right;
  padding-right: 55px;
  color: var(--heading-color);
  font-size: 48px;
  border-bottom: 1px solid rgb(66, 178, 200);
}

.line,
.mobile-nav-list {
  transition: all 0.5s ease;
  font-size: 28px;
}

.mobile-nav {
  width: 50px;
  position: relative;
}

#checkbox:checked~.hamburger__lines span {
  transform: rotate(45deg);
}

#checkbox:checked~.hamburger__lines span:first-child {
  transform: rotate(-45deg) translate(-6.5px, 6.5px);
}

#checkbox:checked~.hamburger__lines span:last-child {
  opacity: 0;
  transform: rotate(0deg) translateX(65px);
}

#checkbox:checked~.mobile-nav-list {
  display: block;
  opacity: 1;
  transform: translate3d(-320px, 0px, 150px);
  position: relative;
  z-index: 5;
}

#checkbox~.mobile-nav-list {
  display: block;
  opacity: 0;
  transform: translate3d(150px, -250px, -50px);
}

/*------------------mobile nav end----------*/
/*
----------------------PARALLAX effect-------------------
*/
/*-------------------PARALLAX effect end----------------*/
.button-container {
  display: flex;
  justify-content: center;
  margin-top: 100px;
  z-index: 2;
}

.button-container a {
  z-index: 2;
}

.main__heading {
  font-size: 90px;
  font-weight: 300;
  margin: 10px 0;
  padding: 0;
  border: 0;
}

.name-highlight {
  color: #1D001B;
  text-shadow: -1px -1px 0 rgb(66, 178, 200), 1px -1px 0 rgb(66, 178, 200), -1px 1px 0 rgb(66, 178, 200), 1px 1px 0 rgb(66, 178, 200);
}

.main__paragraph {
  font-size: var(--big-font-size);
  padding: 0 30px;
}

h3.main__paragraph {
  margin-top: 15px;
}
/* ... */

